--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Itunes</title>
+    <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   </head>
@@ -21,5 +22,7 @@
         
       </section>
       
+      <script src="app.js"></script>
+      <script src="itunes-service.js"></script>
   </body>
 </html>
